--- a/rd/index.html
+++ b/rd/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 	<title>Rogue Defense</title>
-	<script type="text/javascript" src="logger.js"></script>
-	<script type="text/javascript" src="rot/rot.js"></script>
+	<script type="text/javascript" src="../logger.js"></script>
+	<script type="text/javascript" src="../rot/rot.js"></script>
 	<script type="text/javascript" src="rd.js"></script>
 </head>
 
 <body onload="rd.init()">
-    <h1>Ananas aus Caracas</h1>
+    <h1>Rogue Defense</h1>
 </body>
 
 </html>
